SERVER-19255 initalize _ready member of Listener to false